@@ -20,6 +20,7 @@ Copyright: 1998-2000  Thomas Roessler <roessler@guug.de>
            2003-2005     Brendan Cully <brendan@kublai.com>
            2004          Guido Guenther <agx@sigxcpu.org>
            2008          brian m. carlson <sandals@crustytoothpaste.ath.cx>
+           2011          Alfredo Finelli <0x4146@gmail.com>
            1998-2014  Roland Rosenfeld <roland@spinnaker.de>
 License: GPL-2+
  This program is free software; you can redistribute it and/or modify
