@@ -2,8 +2,9 @@
 #
 # -*-sh-mode-*-
 #
-#     Copyright (C) 2000 Ross Campbell <rcampbel@us.oracle.com>
-#     Copyright (C) 2000-2005 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2000      Ross Campbell <rcampbel@us.oracle.com>
+#     Copyright (C) 2000-2014 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2012      Alfredo Finelli <0x4146@gmail.com>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -32,7 +33,7 @@ m_abook_query()
 	    if [ -f "$book" ]
 	    then
 		$ABOOK --datafile $book --mutt-query "$@" \
-		| sed -e '1d;s/$/	abook/'
+		| sed -e '1d;s/\([^\t]*\t[^\t]*\).*/\1\tabook/'
 	    fi
 	done
     fi
